Purescript configs; update ghci.conf

--- a/ghci.conf
+++ b/ghci.conf
@@ -3,3 +3,9 @@
 
 :set -XOverloadedStrings
 :set -XQuasiQuotes
+:set -XTemplateHaskell
+:set -XLambdaCase
+:set -XViewPatterns
+:set -XRecordWildCards
+:set -XTypeApplications
+:set -fno-warn-type-defaults
